name:                vty-gameboard
version:             0.1.0.0
synopsis:            An experiment in Sodium FRP & Brick.
author:              Sebastian Reuße
maintainer:          seb@wirrsal.net
copyright:           Sebastian Reuße
license:             GPL-3
license-file:        LICENSE
build-type:          Simple
extra-source-files:  README.rst
cabal-version:       >=1.10

executable "gameboard-test"
  main-is:             src/Main.hs
  build-depends:       base                       >=4.8  && <4.9,
                       brick                      >=0.1  && <0.2,
                       text                       >=1.2  && <1.3,
                       data-default               >=0.5  && <0.6,
                       base-unicode-symbols       >=0.2  && <0.3,
                       containers-unicode-symbols >=0.3  && <0.4,
                       sr-unicode-symbols         >=0.2  && <0.3,
                       vty                        >=5.4  && <5.5,
                       random                     >=1.1  && <1.2,
                       safe                       >=0.3  && <0.4,
                       sodium                     >=0.11 && <0.12,
                       mtl                        >=2.2  && <2.3,
                       vector                     >=0.10 && <0.11,
                       lens                       >=4.12 && <4.13,
                       MonadRandom                >=0.4  && <0.5,
                       vty-gameboard
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded

library
  exposed-modules:     Brick.Widgets.GameBoard,
                       Data.GameBoard
  build-depends:       base                       >=4.8  && <4.9,
                       brick                      >=0.1  && <0.2,
                       text                       >=1.2  && <1.3,
                       data-default               >=0.5  && <0.6,
                       base-unicode-symbols       >=0.2  && <0.3,
                       containers-unicode-symbols >=0.3  && <0.4,
                       sr-unicode-symbols         >=0.2  && <0.3,
                       vty                        >=5.4  && <5.5,
                       random                     >=1.1  && <1.2,
                       safe                       >=0.3  && <0.4,
                       sodium                     >=0.11 && <0.12,
                       mtl                        >=2.2  && <2.3,
                       vector                     >=0.10 && <0.11,
                       lens                       >=4.12 && <4.13,
                       MonadRandom                >=0.4  && <0.5
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall